# rqt_mypkg

./: CMakeLists.txt  package.xml  setup.py
resource/: MyPlugin.ui  MyPluginExtended.ui
scripts/: ros_node.py
src/rqt_mypkg/: my_module.py
