<?xml version="1.0"?>
<package format="2">
  <name>rqt_mypkg</name>
  <version>0.0.0</version>
  <description>The rqt_mypkg package</description>
  <maintainer email="todo@todo.todo">jakub</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <depend>rospkg</depend>
  <depend>sys</depend>
  <depend>os</depend>
  
  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
